# gio-dump-info

./: CMakeLists.txt  README.md  copied_from_gcontenttype.h  gio_dump_info.c
